# patchr

./: .rustfmt.toml  README.md
.devcontainer/: Dockerfile
migration/: migrate.py  migrations.py
patchr-app/crates/common/: Cargo.toml
patchr-app/crates/common/src/: constants.rs  lib.rs  util.rs
patchr-app/crates/common/src/test/: util.rs
patchr-app/crates/common/src/util/: git.rs  input.rs  misc.rs  rust.rs
patchr-app/crates/git/: Cargo.toml
patchr-app/crates/git/src/: lib.rs  patch_sender.rs  repo.rs  series.rs  util.rs
patchr-app/crates/git/src/test/: series.rs
patchr-app/crates/patchr/: Cargo.toml
patchr-app/crates/patchr/src/: cli_output.rs  commands.rs  environment.rs  error_code.rs  main.rs  parser.rs  user_data.rs  util.rs
patchr-app/crates/patchr/src/commands/: add_mailing_list.rs  add_revision.rs  cleantmp.rs  common.rs  configure.rs  create_series.rs  delete_mailing_list.rs  delete_repo.rs  delete_revision.rs  delete_series.rs  edit_cv_skel.rs  edit_revision.rs  edit_series.rs  help.rs  list_repos.rs  list_series.rs  register_repo.rs  send_series.rs  set_verbose.rs  show_series.rs  tag_untag.rs
patchr-app/crates/patchr/src/user_data/: mailing_list.rs  root_file.rs  user_data.rs
patchr-app/resources/: log4rs.yaml
patchr-app/tests/: fake_editor.sh  prolog.sh  test.sh  util.sh
patchr-app/tests/repo/: repo_test.sh
patchr-app/tests/series/: series_test.sh
