[package]
name = "git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
email_address = "0.2.4"
git2 = "0.18.3"
lazy_static = "1.4.0"
regex = "1.10.4"
serde = "1.0.197"
serde_json = "1.0.115"
uuid = "1.8.0"
